force-app/main/default/objects/Question__c/fields/CorrectAnswer__c.field-meta.xml
<CustomField>
    <fullName>CorrectAnswer__c</fullName>
    <label>CorrectAnswer</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>