force-app/main/default/objects/Question__c/fields/QuestionId__c.field-meta.xml
<CustomField>
    <fullName>QuestionId__c</fullName>
    <displayFormat>Q-{000}</displayFormat>
    <label>QuestionId</label>
    <type>AutoNumber</type>
</CustomField>