force-app/main/default/objects/Question__c/fields/QuestionsValue__c.field-meta.xml
<CustomField>
    <fullName>QuestionsValue__c</fullName>
    <label>QuestionsValue</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>