force-app/main/default/objects/Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QuestionId__c</columns>
    <columns>QuestionsValue__c</columns>
    <columns>CorrectAnswer__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>